add uploads to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ build
 /themes/default/views/bundles/inspector_info.php
 /support/scripts/*.php
 /support/scripts/*.sh
+uploads/.htaccess
+uploads/*
